Added all images.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
 </head>
 
 <body>
+    <!-- Header Area Start -->
     <header>
 
     </header>
+    <!-- Header Area End -->
+    <!-- Main Area Start -->
     <main>
+        <!-- Container Start -->
+        <div class="container mx-auto">
 
+        </div>
+        <!-- Container End -->
     </main>
+    <!-- Main Area End -->
+    <!-- Footer Area Start -->
     <footer>
 
     </footer>
+    <!-- Footer Area End -->
 </body>
 
 </html>
