Created main.js and link with index.html

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
 
     </footer>
     <!-- Footer Area End -->
+
+    <!-- JS file link here -->
+    <script src="./main.js"></script>
 </body>
 
 </html>
