Added area result field.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                             class="input-field">
                         <p>cm</p>
                     </div>
-                    <button id="calculateTringleArea" class="btn">Calculate</button>
+                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
+                    <button id="calculateTriangleArea" class="btn">Calculate</button>
                 </div>
                 <!-- Triangle Card Area End -->
                 <!-- Rectangle Card Area Start -->
@@ -56,6 +57,7 @@
                             class="input-field">
                         <p>cm</p>
                     </div>
+                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
                     <button id="calculateRectangleArea" class="btn">Calculate</button>
                 </div>
                 <!-- Rectangle Card Area End -->
@@ -72,6 +74,7 @@
                             class="input-field">
                         <p>cm</p>
                     </div>
+                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
                     <button id="calculateParallelogramArea" class="btn">Calculate</button>
                 </div>
                 <!-- Parallelogram Card Area End -->
@@ -86,6 +89,7 @@
                         <input type="number" name="rhombusD2" placeholder="d2" id="rhombusD2" class="input-field">
                         <p>cm</p>
                     </div>
+                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
                     <button id="calculateRhombusArea" class="btn">Calculate</button>
                 </div>
                 <!-- Rhombus Card Area End -->
@@ -100,6 +104,7 @@
                         <input type="number" name="pentagonB" placeholder="b" id="pentagonB" class=" input-field">
                         <p>cm</p>
                     </div>
+                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
                     <button id="calculatePentagonArea" class="btn">Calculate</button>
                 </div>
                 <!-- Pentagon Card Area End -->
@@ -114,6 +119,7 @@
                         <input type="number" name="ellipseB" placeholder="b" id="ellipseB" class="input-field">
                         <p>cm</p>
                     </div>
+                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
                     <button id="calculateπArea" class="btn">Calculate</button>
                 </div>
                 <!-- Ellipse Card Area End -->
