Added calculation functions.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             class="input-field">
                         <p>cm</p>
                     </div>
-                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
+                    <p class="mt-4">Area (A) = <span id="triangleArea">0</span> cm<sup>2</sup></p>
                     <button id="calculateTriangleArea" class="btn">Calculate</button>
                 </div>
                 <!-- Triangle Card Area End -->
@@ -57,7 +57,7 @@
                             class="input-field">
                         <p>cm</p>
                     </div>
-                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
+                    <p class="mt-4">Area (A) = <span id="rectangleArea">0</span> cm<sup>2</sup></p>
                     <button id="calculateRectangleArea" class="btn">Calculate</button>
                 </div>
                 <!-- Rectangle Card Area End -->
@@ -74,7 +74,7 @@
                             class="input-field">
                         <p>cm</p>
                     </div>
-                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
+                    <p class="mt-4">Area (A) = <span id="parallelogramArea">0</span> cm<sup>2</sup></p>
                     <button id="calculateParallelogramArea" class="btn">Calculate</button>
                 </div>
                 <!-- Parallelogram Card Area End -->
@@ -89,7 +89,7 @@
                         <input type="number" name="rhombusD2" placeholder="d2" id="rhombusD2" class="input-field">
                         <p>cm</p>
                     </div>
-                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
+                    <p class="mt-4">Area (A) = <span id="rhombusArea">0</span> cm<sup>2</sup></p>
                     <button id="calculateRhombusArea" class="btn">Calculate</button>
                 </div>
                 <!-- Rhombus Card Area End -->
@@ -104,7 +104,7 @@
                         <input type="number" name="pentagonB" placeholder="b" id="pentagonB" class=" input-field">
                         <p>cm</p>
                     </div>
-                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
+                    <p class="mt-4">Area (A) = <span id="pentagonArea">0</span> cm<sup>2</sup></p>
                     <button id="calculatePentagonArea" class="btn">Calculate</button>
                 </div>
                 <!-- Pentagon Card Area End -->
@@ -119,8 +119,8 @@
                         <input type="number" name="ellipseB" placeholder="b" id="ellipseB" class="input-field">
                         <p>cm</p>
                     </div>
-                    <p id="triangleArea" class="mt-4">Area (A) = 0 cm<sup>2</sup></p>
-                    <button id="calculateπArea" class="btn">Calculate</button>
+                    <p class="mt-4">Area (A) = <span id="ellipseArea">0</span> cm<sup>2</sup></p>
+                    <button id="calculateEllipseArea" class="btn">Calculate</button>
                 </div>
                 <!-- Ellipse Card Area End -->
                 <!-- Area Calculation Section Start -->
