--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <!-- Ellipse Card Area End -->
                 <!-- Area Calculation Section Start -->
-                <section id="areaCalculation" class="card row-[-1] col-[-1]  w-60">
+                <section id="areaCalculation" class="card items-start row-[-1] col-[-1]  w-60">
                     <h1 class="font-bold mb-4 text-xl">Area Calculation</h1>
                 </section>
                 <!-- Area Calculation Section End -->
